26 October 2007
+ canEdit function in Volume fixed.

17 October 2007
+ Labeled Feature and Delete page permissions as Unrestricted only
+ Moved permission checks out to individual commands.
+ Added missing disapprove function.
+ Restricted users can no longer join, move, de/activate pages.
+ When restricted users added pages, they weren't showing up when
  trying to edit again.
+ Removed delete, de/activate and move options from web page listing
  for restricted users.
+ Added canEdit function to volume to ease permission checks.
+ Commented drop down box on page listing to hide area for restricted
  users. 
+ Updated: templates/forms/list.tpl

Version 1.0.0
-------------------------------------------------------------------------
21 September 2007
+ New volumes will forward the user to the add page form after header
  creation. 
+ View permissions are now observed in the list pages screen.
+ Using new link_title option in Control Panel so the shortened tabs
  have more information.
+ Fixed: On failing allowView, the volume would forward the user to
  the login screen. If the user was already logged in however, they
  would get to see the Volume anyway.

20 September 2007
+ Several permission checks were not using the correct item name
  (volume).
+ Approval tab is no longer seen by restricted users.
+ Removed duplicate approval call.
+ Fixed: Approval pages where not limited by volume number causing all
  unapproved pages to list when a volume was viewed.
+ Unapproved volumes will appear on the list by for the person who
  last updated them. This will allow them to edit while still in the
  queue.
+ Unapproved pages are listed with an [Unapproved] label in the volume
  listing. 
+ Fixed: Restricted users were not seeing the front page and active
  status. 
+ Fixed: When volumes were approved, the approver was getting the
  update status applied to them. There is a parameter on the save
  function to prevent that now.