@@ -196,6 +196,7 @@ class Webpage_Forms {
         $pager->addRowTags('rowTags');
         $pager->addToggle(' ');
         $pager->setSearch('title');
+        Key::restrictEdit($pager->db, 'webpage', 'edit_page');
         $pager->db->addWhere('approved', 1);
         $pager->db->addWhere('approved', 0, '=', 'or', 'up');
         $pager->db->addWhere('update_user_id', Current_User::getId(), '=', 'and', 'up');
