@@ -1,3 +1,7 @@
+29 October 2007
++ The front page indicator (yes/no) is now linkable.
++ The volume listing is restricted by edit rights.
+
 26 October 2007
 + canEdit function in Volume fixed.
 
